Bug 605741. Only send state change notifications when we actually change state for textareas and inputs. f=volkmar r=jst a=dbaron